@@ -1186,13 +1186,6 @@ int main(int argc, char *argv[]) {
     mapserv = msAllocMapServObj();
     mapserv->sendheaders = sendheaders; /* override the default if necessary (via command line -nh switch) */
 
-    mapserv->request->ParamNames = (char **) msSmallMalloc(MS_DEFAULT_CGI_PARAMS*sizeof(char*));
-    mapserv->request->ParamValues = (char **) msSmallMalloc(MS_DEFAULT_CGI_PARAMS*sizeof(char*));
-    if(mapserv->request->ParamNames==NULL || mapserv->request->ParamValues==NULL) {
-      msSetError(MS_MEMERR, NULL, "mapserv()");
-      writeError();
-    }
-
     mapserv->request->NumParams = loadParams(mapserv->request, NULL, NULL, 0, NULL);
     if( mapserv->request->NumParams == -1 ) {
 #ifdef USE_FASTCGI
