@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Move allocation of cgiRequestObj paramNames/Values to msAllocCgiObj() (#1888)
+
 - Add support for simple aggregates for the cluster layer attributes (#3700)
 
 - Improved error reporting in msSaveImage() (#3733)
